Fix image not showing in mobile-view

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ main{
 
 
 .image-container{
-    background-image: url("assets/images/image-web-3-mobile.jpg");
+    background-image: url("../assets/images/image-web-3-mobile.jpg");
     height: 300px;
     background-repeat: no-repeat;
     background-size: cover;
